--- a/index.html
+++ b/index.html
@@ -5,6 +5,34 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/icon.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <meta http-equiv="content-language" content="en">
+  <meta name="keywords" content="website, blog, foo, bar">
+  <meta name="author" content="Fabien Bouns">
+  <meta name="publisher" content="Fabien Bouns">
+  <meta name="copyright" content="Fabien Bouns">
+  <meta name="description"
+    content="Tiktok Data Package Viewer makes it easy to explore and view your Tiktok data package, because tiktok stores a lot of data on you !!!">
+  <meta name="audience" content="Everyone">
+  <meta name="theme-color" content="#FF0050">
+  <meta name="viewport" content="width=device-width">
+  <meta name="image" content="/image.jpeg">
+  <meta name="robots" content="index, follow">
+  <meta name="keywords"
+    content="tiktok, tiktok data, tiktok stats, tiktok information, tiktok, fabien bouns, badbounstv, badbouns">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://tit.bounsbot.com">
+  <meta property="og:title" content="Tiktok is Trash 🗑">
+  <meta property="og:description"
+    content="Tiktok Data Package Viewer makes it easy to explore and view your Tiktok data package, because tiktok stores a lot of data on you !!!">
+  <meta property="og:image" content="/image.jpeg">
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://tit.bounsbot.com">
+  <meta property="twitter:title" content="Tiktok is Trash 🗑">
+  <meta property="twitter:description"
+    content="Tiktok Data Package Viewer makes it easy to explore and view your Tiktok data package, because tiktok stores a lot of data on you !!!">
+  <meta property="twitter:image" content="/image.jpeg">
+
   <title>Tiktok is Trash 🗑</title>
 </head>
 
